Fix the hero on tablet. Mess with the style such that it's hero-text that gets the padding in all cases.

--- a/hero.less
+++ b/hero.less
@@ -23,14 +23,22 @@
 
 @media (min-width: 767px) {
   .hero {
-    height: 664px;
-    padding: 200px 0;
+    height: 500px; 
   }
-  
+
   .hero-text {
-    padding-top: 0;
     font-size: 100px;
     line-height: 100px;
     padding-bottom: 10px;
+  }
+}
+
+@media (min-width: 1170px) {
+  .hero {
+    height: 664px;
+  }
+  
+  .hero-text {
+    padding-top: 190px;  
   }
 }
